testsuite/tests/deriving/should_compile/T17328.hs
{-# LANGUAGE DerivingStrategies, StandaloneDeriving, GeneralizedNewtypeDeriving,
             DerivingVia #-}

module T17328 where

import T17328a ( N1, N2(..) )

import Data.Coerce

deriving newtype instance Eq N1

